# pi-nesy

./: README.md  cleaning.sh  config.json  install.sh  parse_results.sh  requirements.txt  run.sh
config_files/: config_ablation.json  config_low_data_settings.json  config_normal_settings.json  config_with_DeepSoftLogCNN.json
src/apps/mnist-problems/: mnistadd.py  mnistadd.sh  mnistadd_c_tuples.py  mnistadd_carry.py  mnistadd_evaluation.py  mnistadd_find_hyperparameters.py  mnistadd_generate_examples.py  mnistadd_rulebase.py  mnistadd_single.py  mnistadd_y_outputs.py  mnistsudoku.py  mnistsudoku.sh  mnistsudoku_constraints.py  mnistsudoku_export.py  mnistsudoku_find_hyperparameters.py  mnistsudoku_generate_examples.py  mnistsudoku_inference.py  mnistsudoku_learning.py  mnistsudoku_parser_files.py  mnistsudoku_rulebase.py  mnistsudoku_single.py  nn.py  setup_experiment.py  tools_input_vector.py  tools_make_examples.py  try_nn.py
src/apps/mnist-problems/parse_results_and_logs/: mnistadd_inference-and-learning-time.py  mnistadd_parse-results.py  mnistadd_possibilistic-learning-parse-stats.py  mnistadd_possibilistic-learning-parse-thresholds-err-mnist-add.py  mnistsudoku_inference-and-learning-time.py  mnistsudoku_parse-results.py  mnistsudoku_possibilistic-learning-parse-stats.py  mnistsudoku_possibilistic-learning-parse-thresholds-err-mnist-sudoku.py
src/nabla/cpu/: CMakeLists.txt
src/nabla/cpu/src/: Computations.cpp  Computations.hpp  SingleThread.cpp  main.cpp  test.cpp
src/nabla/cuda/: CMakeLists.txt
src/nabla/cuda/src/: ChebyshevDistanceNabla.cu  LowestApproxSolution.cpp  LowestApproxSolution.hpp  MinMax.cu  PotentialLowestSolution.cu  SingleThread.cpp  SingleThread.hpp  cudaChebyshevDistanceNabla.h  cudaMinMax.h  cudaPotentialLowestSolution.h  main.cpp  test.cpp
src/nabla/metal/: CMakeLists.txt
src/nabla/metal/shaders/: ComputeMinMax.metal  ComputeNabla.metal  ComputePotentialMinSolution.metal  NablaChunk.metal
src/nabla/metal/src/: main.cpp  test.cpp
src/nabla/metal/src/Computations/: ComputeMinMax.cpp  ComputeMinMax.hpp  ComputeNabla.cpp  ComputeNabla.hpp  ComputePotentialMinSolution.cpp  ComputePotentialMinSolution.hpp  NablaChunk.cpp  NablaChunk.hpp  SingleThread.cpp  Tools.cpp  Tools.hpp
src/nabla/opencl/: CMakeLists.txt
src/nabla/opencl/src/: main.cpp  test.cpp
src/nabla/opencl/src/Computations/: ComputeMinMax.cpp  ComputeMinMax.hpp  ComputeNabla.cpp  ComputeNabla.hpp  ComputePotentialMinSolution.cpp  ComputePotentialMinSolution.hpp
src/possibilistic_rule_based_systems/: build_matrix.py  inference.py  learning.py  partitions.py  possibilistic_learning.py  possprob_transformations.py
src/utils/: load_config.py  rocauc.py
